# abstract-gpu

./: .clang_complete  .gitignore  .gitmodules  .travis.yml  .travis_build.sh  .travis_build_and_deploy.sh  .travis_deploy.sh  .travis_install.sh  CMakeLists.txt  LICENSE  README.md  ThirdPartyNotices.txt  appveyor.yml  compile_flags.txt  prepare.cmd  prepare.sh  tonelToMonticello.sh
.github/workflows/: continuous-integration-workflow.yaml
ShaderCompiler/: aslc.py
ShaderCompiler/aslc/: AST.py  GLSLBackend.py  HLBackend.py  HLSLBackend.py  Optimization.py  Parser.py  SSA.py  Semantic.py  Tokenizer.py  Type.py  parser.out  parsetab.py
bindings/sysmel/: agpu.sysmel
definitions/: api.xml
implementations/: CMakeLists.txt
implementations/Common/: CMakeLists.txt  dummy_vr.cpp  immediate_renderer.cpp  immediate_renderer.hpp  memory_profiler.cpp  memory_profiler.hpp  offline_shader_compiler.cpp  offline_shader_compiler.hpp  overlay_window.cpp  overlay_window.hpp  overlay_window_win32.cpp  spinlock.hpp  state_tracker.cpp  state_tracker.hpp  state_tracker_cache.cpp  state_tracker_cache.hpp  texture_formats_common.hpp  uberShader.glsl  utility.hpp  vector_math.hpp  window_scraper.cpp  window_scraper.hpp  window_scraper_win32.cpp
implementations/Common/shaders/: common_state.glsl  compile.sh  compiled.inc  flatColor.frag  flatColor.vert  flatLightedColor.vert  flatLightedTextured.vert  flatTextured.frag  flatTextured.vert  fog.glsl  lighting.glsl  smoothColor.frag  smoothColor.vert  smoothLightedColor.vert  smoothLightedTextured.vert  smoothTextured.frag  smoothTextured.vert
implementations/Direct3D12/: CMakeLists.txt  D3D12MemAlloc.cpp  D3D12MemAlloc.h  buffer.cpp  buffer.hpp  command_allocator.cpp  command_allocator.hpp  command_list.cpp  command_list.hpp  command_queue.cpp  command_queue.hpp  common.hpp  common_commands.hpp  compute_pipeline_builder.cpp  compute_pipeline_builder.hpp  constants.hpp  device.cpp  device.hpp  fence.cpp  fence.hpp  framebuffer.cpp  framebuffer.hpp  icd.c  icd.cpp  implicit_resource_command_list.cpp  implicit_resource_command_list.hpp  include_d3d12.hpp  object.hpp  pipeline_builder.cpp  pipeline_builder.hpp  pipeline_state.cpp  pipeline_state.hpp  platform.cpp  platform.hpp  renderpass.cpp  renderpass.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  (+17 more)
implementations/Loader/: CMakeLists.txt  loader.cpp  redirection.cpp
implementations/Metal/: CMakeLists.txt  buffer.hpp  buffer.mm  command_allocator.hpp  command_allocator.mm  command_list.hpp  command_list.mm  command_queue.hpp  command_queue.mm  common.hpp  compute_pipeline_builder.hpp  compute_pipeline_builder.mm  constants.hpp  device.cpp  device.hpp  device.mm  fence.hpp  fence.mm  framebuffer.hpp  framebuffer.mm  icd.c  implicit_resource_command_list.hpp  implicit_resource_command_list.mm  object.hpp  pipeline_builder.hpp  pipeline_builder.mm  pipeline_command_state.hpp  pipeline_state.hpp  pipeline_state.mm  platform.cpp  platform.hpp  platform.mm  renderpass.hpp  renderpass.mm  sampler.hpp  sampler.mm  shader.hpp  shader.mm  shader_resource_binding.hpp  shader_resource_binding.mm  (+17 more)
implementations/OpenGL/: CMakeLists.txt  buffer.cpp  buffer.hpp  command_allocator.cpp  command_allocator.hpp  command_list.cpp  command_list.hpp  command_queue.cpp  command_queue.hpp  common.hpp  compute_pipeline_builder.cpp  compute_pipeline_builder.hpp  constants.hpp  context.cpp  context.hpp  device.cpp  device.hpp  device_unix.cpp  device_win32.cpp  fence.cpp  fence.hpp  framebuffer.cpp  framebuffer.hpp  icd.c  job_queue.hpp  object.hpp  pipeline_builder.cpp  pipeline_builder.hpp  pipeline_state.cpp  pipeline_state.hpp  platform.cpp  platform.hpp  program.cpp  program.hpp  renderpass.cpp  renderpass.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  (+18 more)
implementations/Vulkan/: CMakeLists.txt  buffer.cpp  buffer.hpp  command_allocator.cpp  command_allocator.hpp  command_list.cpp  command_list.hpp  command_queue.cpp  command_queue.hpp  common.hpp  compute_pipeline_builder.cpp  compute_pipeline_builder.hpp  constants.hpp  descriptor_pool.cpp  descriptor_pool.hpp  device.cpp  device.hpp  fence.cpp  fence.hpp  framebuffer.cpp  framebuffer.hpp  icd.c  implicit_resource_command_list.cpp  implicit_resource_command_list.hpp  include_vulkan.h  memory_allocator.cpp  object.hpp  pipeline_builder.cpp  pipeline_builder.hpp  pipeline_state.cpp  pipeline_state.hpp  platform.cpp  platform.hpp  renderpass.cpp  renderpass.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  shader_resource_binding.cpp  (+20 more)
samples/: CMakeLists.txt  Sample1.cpp  Sample2.cpp  Sample3.cpp  SampleBase.cpp  SampleBase.hpp  test.asl
samples/data/shaders/: build_shaders.py  computeAdd.glsl  computeAdd.spv  computeMipmap.glsl  computeMipmapSRGB.glsl  mipmapScreenQuad.glsl  screenQuad.glsl  screenQuadFlippedY.glsl  simple.glslv  simpleFragment.glsl  simpleFragment.hlsl  simpleFragment.metal  simpleFragment.spv  simpleVertex.glsl  simpleVertex.hlsl  simpleVertex.metal  simpleVertex.spv  texturedFragment.as  texturedFragment.glsl  texturedFragment.hlsl  texturedFragment.metal  texturedFragment.spv  texturedVertex.glsl  texturedVertex.hlsl  texturedVertex.metal  texturedVertex.spv
samples/samples-c/: CMakeLists.txt  Sample1.cpp  Sample2.cpp  Sample3.cpp  SampleBase.cpp  SampleBase.hpp  SampleCompute1.cpp
samples/samples-cpp/: CMakeLists.txt  Sample1.cpp  Sample2.cpp  Sample3.cpp  Sample4.cpp  Sample5.cpp  SampleBase.cpp  SampleBase.hpp  SampleCompute1.cpp  SampleImmediate1.cpp  SampleImmediate2.cpp  SampleMesh.hpp  SampleStateTracker1.cpp  SampleVertex.hpp  SampleWindowScraper.cpp
samples/shaders/: simple.glslf
scripts/: appveyor-build.bat  appveyor-deploy.bat  appveyor-deploy.ps1  build-variant-x64.bat  build-variant-x86.bat  build-variant.bat  ci-build.bat  ci-build.ps1  ci-build.sh  ci-package-artifacts.bat  ci-package-artifacts.ps1  ci-package-artifacts.sh  cli.bat  definition.py  make_headers.py  make_headers_cpp.py  make_icdloader.py  make_pharo_bindings.py  subtree_commands  tonelToMonticello.st
tools/: AgpuInfo.cpp  CMakeLists.txt
(+336 files in other folders)
